--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
           <li>Muhammad Reva : 2283120034</li>
         </ul>
   </div>
-    <h1>Pratikum Administrasi Perdata</h1>
+    <h1>Pratikum Administrasi Peradilan</h1>
     <p id="skip-instruction">Klik untuk melanjutkan</p>
     <small style="position: absolute; bottom: 10px; width: 90%; text-align: center; font-size: 11px; color: rgba(255,255,255,0.7);">
-    *Disclaimer: Semua data yang ada di dalam ini bersifat ngarang dan juga mungkin ada banyak kesalahan.* <i>(kurang lebih)</i>
+    *Semua data yang ada di dalam ini bersifat ngarang dan juga mungkin ada banyak kesalahan.* <i>(kurang lebih)</i>
     </small>
   </div>
 
@@ -310,7 +310,7 @@
              data-hakim="Dr. Ade Suryana S.H M.H"
              data-penggugat="Anwar Ikhsan"
              data-tergugat="Muhammad Ammar"
-             data-catatan="Sidang berjalan dengan baik, semua bukti diterima.">Lihat</a></td>
+             data-catatan="Sidang berjalan dengan baik, semua bukti dapat diterima.">Lihat</a></td>
           </tr>
           <!-- Baris 3 -->
           <tr>
@@ -397,6 +397,27 @@
               data-penggugat="Indra Bastian"
               data-tergugat="Lia Oktaviana"
               data-catatan="Sidang mediasi dilaksanakan, kesepakatan sedang dibahas.">Lihat</a></td>
+            <!-- Baris 7 -->
+          <tr>
+            <td>7</td>
+            <td>25/04/2025</td>
+            <td>129/Pdt.G/2025/PA.Cbn</td>
+            <td>Tidak</td>
+            <td>3</td>
+            <td>Pembacaan Gugatan</td>
+            <td><a href="#" class="view-detail"
+              data-nomor="128/Pdt.G/2025/PA.Cbn"
+              data-tanggal="25/04/2025"
+              data-agenda="Pembacaan Gugatan"
+              data-ruangan="Ruang 3"
+              data-keliling="Tidak"
+              data-pendaftaran="13/04/2025"
+              data-surat="S-12351/PA/2025"
+              data-tanggal-surat="19/04/2025"
+              data-hakim=" Dr. H. Riza M.Si S.H"
+              data-penggugat="Andri Setiawan"
+              data-tergugat="Dani Eka Pambudi"
+              data-catatan="Sidang tidak dapat berjalan, pihak tergugat tidak dapat menghadiri persidangan">Lihat</a></td>
           </tr>
         </tbody>
       </table>
