--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
              data-hakim="Dr. H. Sulthan Hasanudin Agung S.H M.H"
              data-penggugat="Vega Vauzizah"
              data-tergugat="Salwa Faalhaeni"
-             data-catatan="Sidang berjalan lancar, tidak ada halangan berarti.">Lihat</a></td>
+             data-kasus="Perkara Wanprestasi"
+             data-catatan="Sidang pembacaan gugatan berlangsung lancar tanpa hambatan. Kedua pihak hadir, dan hakim menetapkan jadwal sidang lanjutan untuk pemeriksaan jawaban tergugat.">Lihat</a></td>
           </tr>
           <!-- Baris 2 -->
           <tr>
@@ -310,7 +311,8 @@
              data-hakim="Dr. Ade Suryana S.H M.H"
              data-penggugat="Anwar Ikhsan"
              data-tergugat="Muhammad Ammar"
-             data-catatan="Sidang berjalan dengan baik, semua bukti dapat diterima.">Lihat</a></td>
+             data-kasus="Sengketa Warisan"
+             data-catatan="Sidang berjalan dengan baik. Semua alat bukti yang diajukan oleh para pihak diterima oleh majelis hakim. Sidang akan dilanjutkan ke tahap kesimpulan sebelum putusan dijatuhkan.">Lihat</a></td>
           </tr>
           <!-- Baris 3 -->
           <tr>
@@ -332,7 +334,8 @@
              data-hakim="Dr. H. Sulthan Hasanudin Agung S.H M.H"
              data-penggugat="Hafis Muhammad"
              data-tergugat="Hilmy Aufar"
-             data-catatan="Putusan dibacakan, pihak penggugat memenangkan perkara.">Lihat</a></td>
+             data-kasus="Sengketa Tanah dan Properti"
+             data-catatan="Putusan telah dibacakan oleh Majelis Hakim. Berdasarkan bukti-bukti yang diajukan, pihak penggugat dinyatakan menang. Hakim menyatakan bahwa kepemilikan sah atas tanah tersebut berada pada penggugat. Tergugat diberikan hak untuk mengajukan banding dalam waktu 14 hari kerja.">Lihat</a></td>
             <!-- Baris 4 -->
           <tr>
             <td>4</td>
@@ -353,7 +356,8 @@
               data-hakim="Dr. H. Farhan H. Abdullah S.H M.H"
               data-penggugat="Mira Sari"
               data-tergugat="Andi Priyanto"
-              data-catatan="Sidang tidak berjalan dengan baik, pihak tergugat tidak dapat menghadiri persidangan">Lihat</a></td>
+              data-kasus="Perkara Perceraian"
+              data-catatan="Sidang tidak berjalan dengan lancar karena pihak tergugat kembali tidak menghadiri persidangan. Pemeriksaan bukti hanya dilakukan oleh pihak penggugat. Hakim akan menjadwalkan ulang sidang dengan pemanggilan resmi kembali kepada tergugat.Sidang tidak berjalan dengan lancar karena pihak tergugat kembali tidak menghadiri persidangan. Pemeriksaan bukti hanya dilakukan oleh pihak penggugat. Hakim akan menjadwalkan ulang sidang dengan pemanggilan resmi kembali kepada tergugat.">Lihat</a></td>
           </tr>
           <!-- Baris 5 -->
           <tr>
@@ -375,7 +379,8 @@
               data-hakim="Dr. H. Anton S.H M.H"
               data-penggugat="Dina Kartika"
               data-tergugat="Reza Fauzi"
-              data-catatan="Putusan dibacakan, pihak tergugat kalah dalam perkara ini.">Lihat</a></td>
+              data-kasus="Sengketa Tanah dan Properti"
+              data-catatan="Putusan telah dibacakan oleh Majelis Hakim. Hakim menyatakan pihak tergugat kalah dalam perkara ini, dan tanah dinyatakan sah sebagai milik penggugat. Tergugat diberikan waktu 14 hari untuk mengajukan upaya hukum banding.">Lihat</a></td>
             <!-- Baris 6 -->
           <tr>
             <td>6</td>
@@ -396,7 +401,8 @@
               data-hakim=" Dr. H. Riza M.Si S.H"
               data-penggugat="Indra Bastian"
               data-tergugat="Lia Oktaviana"
-              data-catatan="Sidang mediasi dilaksanakan, kesepakatan sedang dibahas.">Lihat</a></td>
+              data-kasus="Sengketa Nafkah Anak Pasca Cerai"
+              data-catatan="Sidang mediasi telah dilaksanakan. Kedua belah pihak hadir dan menunjukkan itikad baik. Proses diskusi masih berlangsung dan kesepakatan final sedang dalam tahap perumusan.">Lihat</a></td>
             <!-- Baris 7 -->
           <tr>
             <td>7</td>
@@ -409,7 +415,7 @@
               data-nomor="128/Pdt.G/2025/PA.Cbn"
               data-tanggal="25/04/2025"
               data-agenda="Pembacaan Gugatan"
-              data-ruangan="Ruang 3"
+              data-ruangan="Ruang 1"
               data-keliling="Tidak"
               data-pendaftaran="13/04/2025"
               data-surat="S-12351/PA/2025"
@@ -417,7 +423,8 @@
               data-hakim=" Dr. H. Riza M.Si S.H"
               data-penggugat="Andri Setiawan"
               data-tergugat="Dani Eka Pambudi"
-              data-catatan="Sidang tidak dapat berjalan, pihak tergugat tidak dapat menghadiri persidangan">Lihat</a></td>
+              data-kasus="Perkara Wanprestasi"
+              data-catatan="Sidang tidak dapat berjalan karena pihak tergugat tidak menghadiri persidangan tanpa keterangan. Hakim memutuskan untuk menjadwalkan pemanggilan ulang sesuai prosedur.">Lihat</a></td>
           </tr>
         </tbody>
       </table>
@@ -444,6 +451,7 @@
     <p><strong>Hakim Ketua:</strong> <span id="popup-hakim"></span></p>
     <p><strong>Penggugat:</strong> <span id="popup-penggugat"></span></p>
     <p><strong>Tergugat:</strong> <span id="popup-tergugat"></span></p>
+    <p><strong>Jenis Kasus:</strong> <span id="popup-kasus"></span></p>
     <p><strong>Catatan:</strong> <span id="popup-catatan"></span></p>
   </div>
 
@@ -484,6 +492,7 @@
           const hakim = button.getAttribute('data-hakim');
           const penggugat = button.getAttribute('data-penggugat');
           const tergugat = button.getAttribute('data-tergugat');
+          const kasus = button.getAttribute('data-kasus');
           const catatan = button.getAttribute('data-catatan');
 
           // data ke detail
@@ -500,6 +509,7 @@
           document.getElementById('popup-hakim').textContent = hakim;
           document.getElementById('popup-penggugat').textContent = penggugat;
           document.getElementById('popup-tergugat').textContent = tergugat;
+          document.getElementById('popup-kasus').textContent = kasus;
           document.getElementById('popup-catatan').textContent = catatan;
 
           // muncul popup
